2008-09-29 Joseph Myers  <joseph@codesourcery.com>

	* src/arch-sparc64.c (sparc64_prelink_rela,
	sparc64_prelink_conflict_rela, sparc64_undo_prelink_rela,
	sparc64_reloc_class): Handle TLS relocations.
	(PL_ARCH): Update mmap_base and mmap_end for TASK_UNMAPPED_BASE
	change to 0xfffff80100000000.

2007-12-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* src/gather.c (gather_object): Print an error if nftw64 fails.

2007-10-09  Jakub Jelinek  <jakub@redhat.com>

	* src/cxx.c (remove_redundant_cxx_conflicts): Allow .sdata
	section as well.

	* src/prelink.h (struct prelink_conflict): Add next2 field.
	(struct prelink_conflicts): Add hash2 field.
	* src/get.c (prelink_record_relocations): Clear next2 fields.
	* src/prelink.c (free_info): Also free hash2 table.
	* src/cxx.c (remove_redundant_cxx_conflicts): Populate hash2
	if not populated yet, use it to speed up pltref checking.

	* src/prelink.h (struct prelink_conflicts): New type.
	(struct prelink_info): Change type of conflicts and curconflicts
	fields to struct prelink_conflicts *.
	* src/get.c (conflict_hash_init): New function.
	(prelink_record_relocations): Adjust initialization of conflicts
	array.  If conflict linked lists has more than 15 entries, use
	hash table with chains.
	* src/prelink.c (free_info): Handle freeing conflict list using a hash
	table.
	* src/fptr.c (opd_init): Only walk corresponding hash chain if
	conflict list is using a hash table.
	* src/conflict.c (prelink_conflict): Likewise.
	(prelink_build_conflicts): Handle conflict list using a hash table.
	* src/cxx.c (remove_redundant_cxx_conflicts): Likewise.  Only walk
	corresponding hash chain if conflict list is using a hash table.

	* src/doit.c (find_ents): Clear e->u.tmp.
	(clear_ent_marks, find_unlisted_dependency): Remove.
	(prelink_ent): More efficient non-recursive check for
	unlisted dependencies.

	* src/cxx.c (find_cxx_sym): If fcs->lastndx != -1, search first
	among symbols around it.
